--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "axios": "^1.3.4",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
