update code for google key

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.33",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
+    "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
