--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^1.3.4",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "laravel-echo": "^1.15.0",
+    "laravel-echo-server": "^1.6.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
+    "pusher-js": "^8.0.2",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vue3-google-login": "^2.0.15",
