--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pusher-js": "^8.0.2",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
     "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.0"
   },
