--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
     "laravel-echo-server": "^1.6.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
-    "pusher-js": "^8.0.2",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
-    "vue-sweetalert2": "^5.0.5",
-    "vue3-google-login": "^2.0.15",
-    "vuex": "^4.0.0"
+    "vue3-google-login": "^2.0.15"  
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
