--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ VUE_APP_BASE_URL=
 VUE_APP_GOOGLE_CLIENT=
 VUE_APP_WEBSOCKET_KEY=local
 VUE_APP_WEBSOCKET_SERVER=localhost
+VUE_APP_GRAPHQL=http://localhost:8000/graphql
