--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.12",
+    "@vue/apollo-option": "^4.0.0-beta.4",
     "axios": "^1.3.4",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "laravel-echo": "^1.15.0",
     "laravel-echo-server": "^1.6.3",
     "nprogress": "^0.2.0",
