--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^2.0.33",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
-    "vue3-google-login": "^2.0.15"
+    "vue3-google-login": "^2.0.15",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
