--- a/.github/workflows/vue3.yaml
+++ b/.github/workflows/vue3.yaml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: ["master"]
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,11 +17,11 @@ jobs:
           cache: 'npm'
       - name: Install dependence
         run: npm ci
-      - name: setup env
+      - name: Setup env
         run: cp .env.ci .env.
-      - name: build script
+      - name: Build script
         run: npm run build --if-present
-      - name: test
+      - name: Test
         run: npm test
 
   
