--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "vitest"
+    "test": "vitest --dom"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "happy-dom": "^9.9.2",
     "laravel-echo": "^1.15.0",
     "laravel-echo-server": "^1.6.3",
     "nprogress": "^0.2.0",
@@ -35,6 +36,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/test-utils": "^2.3.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
