--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -4,6 +4,8 @@ on:
     branches: ["master"]
   pull_request:
     branches: ["master"]
+  schedule:
+  - cron: "5 17 * * *"
 jobs:
   run-github-action:
     runs-on: ubuntu-latest
