--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -6,6 +6,7 @@ on:
     branches: ["master"]
 env:
   FIRST_ENV: This is test env
+  SECRET_ENV: ${{secrets.SECRECT_ENV}}
 jobs:
   log-env:
     runs-on: ubuntu-latest
@@ -15,4 +16,5 @@ jobs:
       - name: Log env
         run: |
           echo "env ${FIRST_ENV}"
+          echo "env secret ${SECRET_ENV}"
           echo "env ${JOB_ENV}"
