--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -1,7 +1,7 @@
 name: ENV variables
 on: 
-  push: 
-    branches: ["master"]
+  # push: 
+  #   branches: ["master"]
   pull_request:
     branches: ["master"]
 env:
