--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -1,14 +1,21 @@
 name: Matrix
-on: push
+on: 
+  # push:
+  #   branches: ["master"]
+  pull_request:
+    branches: ["master"]
 
 jobs:
   node-version:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Log currect nodde version
-        run: node -v
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 8
-      - name: Log node version after setup nodeV3
-        run: node -v
+    strategy:
+      matrix:
+        node_versions: [6,18,10]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Log currect nodde version
+      run: node -v
+    - uses: actions/setup-node@v3
+      with:
+        node-version: ${{matrix.node_versions}}
+    - name: Log node version after setup nodeV3
+      run: node -v
