--- a/.github/workflows/vue3.yaml
+++ b/.github/workflows/vue3.yaml
@@ -1,8 +1,8 @@
 name: Vue CI
 
 on: 
-  push: 
-    branches: ["master"]
+  # push: 
+  #   branches: ["master"]
   pull_request:
     branches: ["master"]
 jobs:
