--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -4,17 +4,24 @@ on: push
 jobs: 
   node-docker:
     runs-on: ubuntu-latest
-    container: 
-      image: node:13.5.0-alpine3.10
+    services:
+      app: 
+        image: alialaa17/node-api
+        ports:
+          - 3001:3000
+      mongo:
+        image: mongo
+        ports:
+          - "27017:27017"
     steps:
-      - name: Log node version
-        run: |
-          node -v
-          cat /etc/os-release
+      - name: Post a user
+        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json'-d {\"username\":\"hello33\",\"address\":\"Da nang\"}"
+      - name: Get Users
+        run: "curl -X GET http://localhost:3001/api/user"
   redis-docker:
     runs-on: ubuntu-latest
     container: 
-      image: redis:6.0.19-alpine
+      image: redis
     steps:
       - name: Test redis install
         run: 
