--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -1,5 +1,9 @@
 name: Container 
-on: push
+on:
+  # push: 
+  #   branches: ["master"]
+  pull_request:
+    branches: ["master"]
 
 jobs: 
   node-docker:
