update for second job

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,6 +37,9 @@ jobs:
   deploy:
     needs:  test-and-build-source
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v1
