--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,8 @@ jobs:
         # Copy to S3
       - name: copy code to S3
         run: |
-          zip -r project.zip ./dist
+          cp appspec.yml ./dist/appspec.yml
+          zip -r project.zip ./dist 
           aws s3 cp project.zip s3://codedeploy-vue3/project.zip
   deploy:
     needs:  test-and-build-source
