--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: copy code to S3
         run: |
           cp appspec.yml ./dist/appspec.yml
+          cp -r scripts ./dist/scripts
           zip -r project.zip ./dist 
           aws s3 cp project.zip s3://codedeploy-vue3/project.zip
   deploy:
