--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "vitest"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^4.1.0",
     "axios": "^1.3.4",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
@@ -38,6 +40,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vitest": "^0.30.1"
   }
 }
