--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 name: Deploy FE
 on:
-  # push:
-  #   branches: ["master"]
+  push:
+    branches: ["master"]
   pull_request:
     branches: ["master"]
 
