--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: /
+  - source: /dist
     destination: /var/www/game.g-learning.click
 hooks:
   AfterInstall:
