test update env for backend url

--- a/.env.ci
+++ b/.env.ci
@@ -1,4 +1,4 @@
 VUE_APP_TITLE="Vue APP"
-VUE_APP_BASE_URL=http://back-end.g-learning.click/api
+VUE_APP_BASE_URL=
 VUE_APP_GRAPHQL=http://localhost:8000/graphql
 VUE_APP_GOOGLE_CLIENT=
