--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -1,15 +1,15 @@
-name: Container 
+name: Container
 on:
-  # push: 
+  # push:
   #   branches: ["master"]
   pull_request:
     branches: ["master"]
 
-jobs: 
+jobs:
   node-docker:
     runs-on: ubuntu-latest
     services:
-      app: 
+      app:
         image: alialaa17/node-api
         ports:
           - 3001:3000
@@ -24,13 +24,12 @@ jobs:
         run: "curl -X GET http://localhost:3001/api/users"
   redis-docker:
     runs-on: ubuntu-latest
-    container: 
+    container:
       image: redis
-      ports: 
+      ports:
         - "6379:6379"
     steps:
       - name: Test redis install
-        run: 
-          redis-cli -v
+        run: redis-cli -v
           cat /etc/os-release
 # CI=true npm run test -- --coverage
