--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,11 +24,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18
-      - name: install dependences 
+      - name: install dependences
         run: npm ci
       - name: unit test
-        run: CI=true npm run test 
-      - name: build
+        run: CI=true npm run test
+      - name:
+          build
           # update env need to add "\/" example: "http:\/\/back-end.g-learning.click\/api"
         run: |
           sed -i \
@@ -38,7 +39,7 @@ jobs:
           npm run build
         # Copy to S3
       - name: copy code to S3
-     # cp laravel-echo-server.json ./deploy
+        # cp laravel-echo-server.json ./deploy
         run: |
           mkdir deploy
           cp appspec.yml ./deploy
@@ -47,22 +48,20 @@ jobs:
           zip -r project.zip ./deploy 
           aws s3 cp project.zip s3://codedeploy-vue3/project.zip
   deploy:
-    needs:  test-and-build-source
+    needs: test-and-build-source
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
     steps:
-    - name: configure aws credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: notify for codedeploy
-      run: |
-        aws deploy create-deployment \
-          --application-name laravel-deploy \
-          --deployment-group-name laravel-codedeploy \
-          --s3-location bucket=codedeploy-vue3,bundleType=zip,key=project.zip
-
-
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: notify for codedeploy
+        run: |
+          aws deploy create-deployment \
+            --application-name laravel-deploy \
+            --deployment-group-name laravel-codedeploy \
+            --s3-location bucket=codedeploy-vue3,bundleType=zip,key=project.zip
