--- a/.github/workflows/vue3.yaml
+++ b/.github/workflows/vue3.yaml
@@ -1,7 +1,7 @@
 name: Vue CI
 
-on: 
-  # push: 
+on:
+  # push:
   #   branches: ["master"]
   pull_request:
     branches: ["master"]
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.15.0"
-          cache: 'npm'
+          cache: "npm"
       - name: Install dependence
         run: npm ci
       - name: Setup env
@@ -23,5 +23,3 @@ jobs:
         run: npm run build --if-present
       - name: Test
         run: npm test
-
-  
