--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test": "vitest --dom",
+    "format": "prettier --write .",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
@@ -43,8 +44,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "husky": "^8.0.3",
     "jsdom": "^21.1.1",
-    "prettier": "^2.4.1",
+    "prettier": "2.8.8",
     "typescript": "~4.5.5",
     "vitest": "^0.30.1"
   }
