--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,20 +13,11 @@
     "sourceMap": true,
     "baseUrl": ".",
     "typeRoots": ["./node_modules/@types", "./src/interfaces"],
-    "types": [
-      "webpack-env",
-    ],
+    "types": ["webpack-env"],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
     "src/**/*.ts",
@@ -35,7 +26,5 @@
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
