--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint",
     "test": "vitest --dom",
     "format": "prettier --write .",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "lint-staged": {
+      "*.ts": [
+        "npm run lint",
+        "npm run format",
+        "git add ."
+      ]
+    }
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
@@ -46,6 +53,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^8.0.3",
     "jsdom": "^21.1.1",
+    "lint-staged": "^13.2.2",
     "prettier": "2.8.8",
     "typescript": "~4.5.5",
     "vitest": "^0.30.1"
