--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vitest": "^0.30.1"
   },
   "lint-staged": {
-    "*.{json,ts,vue}": [
+    "*.{json,ts,vue,md,js,css,scss}": [
       "npm run format",
       "git add ."
     ]
