--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.3.4",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
