--- a/package.json
+++ b/package.json
@@ -26,18 +26,22 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "happy-dom": "^9.9.2",
+    "js-cookie": "^3.0.5",
     "laravel-echo": "^1.15.0",
     "laravel-echo-server": "^1.6.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
+    "sweetalert2": "^11.7.5",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
+    "vue-toast-notification": "^3.1.1",
     "vue3-google-login": "^2.0.15",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@types/js-cookie": "^3.0.3",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -57,7 +61,10 @@
     "husky": "^8.0.3",
     "jsdom": "^21.1.1",
     "lint-staged": "^13.2.2",
+    "node-sass": "^9.0.0",
     "prettier": "2.8.8",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
     "typescript": "~4.5.5",
     "vitest": "^0.30.1"
   },
